tests/match-06/out.txt
error: unreachable pattern
  ┌─ inp.sml:4:5
  │
4 │   | (_, false) => 2
  │     ^^^^^^^^^^

typechecking failed
